overflow fixed

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,5 @@
 .container {
+  overflow-x: hidden;
   margin-top: 5rem;
   position: relative;
   .cols {
