--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 html {
   scroll-behavior: smooth;
   font-size: 1vw;
+  overflow-x: hidden;
 }
 
 body {
